<?xml version="1.0"?>
<package format="2">
  <name>rangenet_lib</name>
  <version>0.1.0</version>
  <description>ROS Node for Segmentation using rangenet</description>

  <maintainer email="xieyuanli.chen@igg.uni-bonn.de">Xieyuanli Chen</maintainer>
  
  <author email="amilioto@uni-bonn.de">Andres Milioto</author>
  <author email="marrcogrova@gmail.com">Marco A. Montes Grova</author>
  
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
